   - lp-shell

  [ Stefano Rivera ]
  * syncpackage: Show changes to be synced when performing native syncs.
  * syncpackage: Support --bug (extra bugs to be closed by the sync) with
    native syncs. (Bugs are closed one individually, via the API, post-sync)
  * dgetlp, submittodebian, 404main: Use unicode strings for literal strings
    containing non-ASCII characters (LP: #836661)

 -- Stefano Rivera <stefanor@debian.org>  Sat, 03 Sep 2011 21:04:38 +0200

ubuntu-dev-tools (0.128) unstable; urgency=low

  [ Stefano Rivera ]
  * ubuntutools.builder: Detect missing builder and fail early.
  * backportpackage: Backport from local source packages again (LP: #801945)
  * ubuntutools.test.test_archive: Forgive newer python-debian's for calling
    GpgInfo.from_sequence() with the optional keyrings arguments.

  [ Julian Taylor ]
  * lp-shell: use ipython shell if available

 -- Stefano Rivera <stefanor@debian.org>  Tue, 16 Aug 2011 11:15:18 +0200

ubuntu-dev-tools (0.127) unstable; urgency=low

  * Move debian-distro-info, distro-info, and ubuntu-distro-info from
    ubuntu-dev-tools into distro-info.

 -- Benjamin Drung <bdrung@debian.org>  Fri, 01 Jul 2011 22:07:18 +0200

ubuntu-dev-tools (0.126) unstable; urgency=low

  [ Evan Broder ]
  * ubuntutools.misc: Add a new "system_distribution_chain", which returns
    a list starting with the current distribution and working its way up
    each distribution's parent.
  * ubuntutools.misc: Add a function to find the distribution that
    used a given release codename.
  * backportpackage, doc/backportpackage.1: Accept codenames from any
    distribution in the parenting chain. Makes it possible to, e.g.,
    backport from Debian. (LP: #703099)
  * ubuntutools.subprocess:
    - New drop-in replacement wrapper module around subprocess that
      backports the restore_signals kwarg and defaults close_fds=True
    - Switch everything previously using subprocess to use
      ubuntutools.subprocess instead (LP: #785854)
